--- a/Client/Herebris.Client.fsproj
+++ b/Client/Herebris.Client.fsproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Elmish" Version="3.1.0" />
     <PackageReference Include="Fable.Core" Version="3.2.0" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
+    <PackageReference Include="Feliz" Version="1.27.0" />
+    <PackageReference Include="Feliz.Router" Version="3.3.0" />
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
   </ItemGroup>
 </Project>
