--- a/Server/Herebris.Server.fsproj
+++ b/Server/Herebris.Server.fsproj
@@ -6,9 +6,14 @@
     <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Bindings\Pg.fs" />
     <Compile Include="Main.fs" />
     <PackageReference Include="Fable.Core" Version="3.2.0" />
+    <PackageReference Include="Fable.Node" Version="1.2.0" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="rollup.config.js" />
   </ItemGroup>
 </Project>
