--- a/Server/Herebris.Server.fsproj
+++ b/Server/Herebris.Server.fsproj
@@ -6,7 +6,16 @@
     <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Bindings\Qs.fs" />
+    <Compile Include="Bindings\RangeParser.fs" />
     <Compile Include="Bindings\Pg.fs" />
+    <Compile Include="Bindings\Connect.fs" />
+    <Compile Include="Bindings\BodyParser.fs" />
+    <Compile Include="Bindings\ServeStatic.fs" />
+    <Compile Include="Bindings\ExpressServeStaticCore.fs" />
+    <Compile Include="Bindings\Express.fs" />
+    <Compile Include="Express\Router.fs" />
+    <Compile Include="Express\Application.fs" />
     <Compile Include="Main.fs" />
     <PackageReference Include="Fable.Core" Version="3.2.0" />
     <PackageReference Include="Fable.Node" Version="1.2.0" />
@@ -14,6 +23,7 @@
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="nodemon.json" />
     <Content Include="rollup.config.js" />
   </ItemGroup>
 </Project>
