--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,11 @@
   "description": "",
   "main": "rollup.config.js",
   "scripts": {
-    "build": "dotnet fable Herebris.Server.fsproj --outDir fableBuild && rollup -c"
+    "build": "dotnet fable Herebris.Server.fsproj --outDir fableBuild && npx rollup -c",
+    "watch": "npx concurrently -n fable,rollup \"npm run watch-fable\" \"npm run watch-rollup\"",
+    "watch-fable": "dotnet fable Herebris.Server.fsproj --outDir fableBuild --watch",
+    "watch-rollup": "npx rollup -c -w",
+    "watch-nodemon": "npx nodemon dist/bunle.js"
   },
   "author": "Mangel Maxime <mangel.maxime@protonmail.com>",
   "license": "MIT",
@@ -14,6 +18,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "rollup": "^2.34.2"
   }
