--- a/Server/Tests/Herebris.Tests.fsproj
+++ b/Server/Tests/Herebris.Tests.fsproj
@@ -6,8 +6,12 @@
     <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Fable.Mocha.Extensions.fs" />
     <Compile Include="Main.fs" />
+    <Content Include="rollup.config.js" />
     <PackageReference Include="Fable.Core" Version="3.2.0" />
+    <PackageReference Include="Fable.Mocha" Version="2.9.1" />
+    <PackageReference Include="Fable.Node" Version="1.2.0" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
   </ItemGroup>
