Add Bindings prefix to bindings files making it easier to identify in the Solution view

--- a/Server/Sources/Herebris.Server.fsproj
+++ b/Server/Sources/Herebris.Server.fsproj
@@ -1,30 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Name>Herebris</Name>
-    <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="..\..\Bindings\Qs.fs" />
-    <Compile Include="..\..\Bindings\RangeParser.fs" />
-    <Compile Include="..\..\Bindings\Pg.fs" />
-    <Compile Include="..\..\Bindings\Connect.fs" />
-    <Compile Include="..\..\Bindings\BodyParser.fs" />
-    <Compile Include="..\..\Bindings\ServeStatic.fs" />
-    <Compile Include="..\..\Bindings\ExpressServeStaticCore.fs" />
-    <Compile Include="..\..\Bindings\Express.fs" />
-    <Compile Include="Express\Router.fs" />
-    <Compile Include="Express\Application.fs" />
-    <Compile Include="Main.fs" />
-    <PackageReference Include="Fable.Core" Version="3.2.0" />
-    <PackageReference Include="Fable.Node" Version="1.2.0" />
-    <PackageReference Include="Fable.Promise" Version="2.1.0" />
-    <PackageReference Include="Thoth.Json" Version="5.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="nodemon.json" />
-    <Content Include="rollup.config.js" />
-    <Folder Include="Sources" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <Name>Herebris</Name>
+        <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
+    </PropertyGroup>
+    <ItemGroup>
+        <Compile Include="..\..\Bindings\Bindings.Pg.fs" />
+        <Compile Include="..\..\Bindings\Bindings.Connect.fs" />
+        <Compile Include="..\..\Bindings\Bindings.RangeParser.fs" />
+        <Compile Include="..\..\Bindings\Bindings.Qs.fs" />
+        <Compile Include="..\..\Bindings\Bindings.BodyParser.fs" />
+        <Compile Include="..\..\Bindings\Bindings.ServeStatic.fs" />
+        <Compile Include="..\..\Bindings\Bindings.ExpressServeStaticCore.fs" />
+        <Compile Include="..\..\Bindings\Bindings.Express.fs" />
+        <Compile Include="Express\Router.fs" />
+        <Compile Include="Express\Application.fs" />
+        <Compile Include="Main.fs" />
+        <PackageReference Include="Fable.Core" Version="3.2.0" />
+        <PackageReference Include="Fable.Node" Version="1.2.0" />
+        <PackageReference Include="Fable.Promise" Version="2.1.0" />
+        <PackageReference Include="Thoth.Json" Version="5.0.0" />
+    </ItemGroup>
 </Project>
