--- a/Server/Sources/Herebris.Server.fsproj
+++ b/Server/Sources/Herebris.Server.fsproj
@@ -6,14 +6,30 @@
         <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="..\..\Bindings\Bindings.Pg.fs" />
-        <Compile Include="..\..\Bindings\Bindings.Connect.fs" />
-        <Compile Include="..\..\Bindings\Bindings.RangeParser.fs" />
-        <Compile Include="..\..\Bindings\Bindings.Qs.fs" />
-        <Compile Include="..\..\Bindings\Bindings.BodyParser.fs" />
-        <Compile Include="..\..\Bindings\Bindings.ServeStatic.fs" />
-        <Compile Include="..\..\Bindings\Bindings.ExpressServeStaticCore.fs" />
-        <Compile Include="..\..\Bindings\Bindings.Express.fs" />
+        <Compile Include="..\..\Bindings\Pg.fs">
+          <Link>Bindings\Pg.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\Connect.fs">
+          <Link>Bindings\Connect.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\RangeParser.fs">
+          <Link>Bindings\RangeParser.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\Qs.fs">
+          <Link>Bindings\Qs.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\BodyParser.fs">
+          <Link>Bindings\BodyParser.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\ServeStatic.fs">
+          <Link>Bindings\ServeStatic.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\ExpressServeStaticCore.fs">
+          <Link>Bindings\ExpressServeStaticCore.fs</Link>
+        </Compile>
+        <Compile Include="..\..\Bindings\Express.fs">
+          <Link>Bindings\Express.fs</Link>
+        </Compile>
         <Compile Include="Express\Router.fs" />
         <Compile Include="Express\Application.fs" />
         <Compile Include="Main.fs" />
