--- a/Server/package.json
+++ b/Server/package.json
@@ -5,13 +5,14 @@
   "description": "",
   "scripts": {
     "build": "dotnet fable Herebris.Server.fsproj --outDir fableBuild && npx rollup -c",
-    "watch-server": "npx concurrently -n fable_server,rollup_server,nodemon \"npm run watch-server-fable\" \"npm run watch-server-rollup\" \"npm run watch-server-nodemon\"",
+    "watch-server": "npx concurrently -n fable_server,nodemon \"npm run watch-server-fable\" \"npm run watch-server-nodemon\"",
     "watch-server-fable": "dotnet fable Sources/Herebris.Server.fsproj --outDir Sources/fableBuild --watch",
-    "watch-server-rollup": "npx rollup -c Sources/rollup.config.js -w",
-    "watch-server-nodemon": "npx nodemon Sources/dist/bundle.js --config nodemon.json",
+    "watch-server-nodemon": "npx nodemon --watch Sources/fableBuild ",
+    "//": "Start script is used by nodemon to restart the server when changes are detected. Using --exec didn't work",
+    "start": "node -r esm Sources/fableBuild/Main.js",
     "watch-tests": "npx concurrently -n fable_tests,mocha,server \"npm run watch-tests-fable\" \"npm run watch-tests-mocha\" \"npm run watch-server\"",
     "watch-tests-fable": "dotnet fable Tests/Herebris.Tests.fsproj --outDir Tests/fableBuild --watch",
-    "watch-tests-mocha": "npx mocha Tests/dist/bundle.js -w"
+    "watch-tests-mocha": "npx mocha -r esm ./Tests/fableBuild/Main.js -w"
   },
   "author": "Mangel Maxime <mangel.maxime@protonmail.com>",
   "license": "MIT",
