--- a/Client/Sources/Herebris.Client.fsproj
+++ b/Client/Sources/Herebris.Client.fsproj
@@ -10,10 +10,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Elmish" Version="3.1.0" />
-    <PackageReference Include="Fable.Core" Version="3.2.0" />
+    <PackageReference Include="Fable.Core" Version="3.1.6" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
-    <PackageReference Include="Feliz" Version="1.27.0" />
-    <PackageReference Include="Feliz.Router" Version="3.3.0" />
+    <PackageReference Include="Feliz" Version="1.31.1 " />
+    <PackageReference Include="Feliz.Router" Version="3.5.0" />
+    <PackageReference Include="Thoth.Fetch" Version="2.0.0" />
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
