--- a/Server/Sources/Herebris.Server.fsproj
+++ b/Server/Sources/Herebris.Server.fsproj
@@ -27,13 +27,16 @@
         <Compile Include="..\..\Bindings\ExpressServeStaticCore.fs">
           <Link>Bindings\ExpressServeStaticCore.fs</Link>
         </Compile>
+        <Compile Include="..\..\Bindings\Cors.fs">
+            <Link>Bindings\Cors.fs</Link>
+        </Compile>
         <Compile Include="..\..\Bindings\Express.fs">
           <Link>Bindings\Express.fs</Link>
         </Compile>
         <Compile Include="Express\Router.fs" />
         <Compile Include="Express\Application.fs" />
         <Compile Include="Main.fs" />
-        <PackageReference Include="Fable.Core" Version="3.2.0" />
+        <PackageReference Include="Fable.Core" Version="3.1.6" />
         <PackageReference Include="Fable.Node" Version="1.2.0" />
         <PackageReference Include="Fable.Promise" Version="2.1.0" />
         <PackageReference Include="Thoth.Json" Version="5.0.0" />
