--- a/Client/Sources/Herebris.Client.fsproj
+++ b/Client/Sources/Herebris.Client.fsproj
@@ -6,6 +6,10 @@
     <ProjectGuid>{60913006-6f27-4f4e-9398-bc83bcf5c43a}</ProjectGuid>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Router.fs" />
+    <Compile Include="Pages/Administration/Administration.User.Create.fs" />
+    <Compile Include="Pages/Administration/Administration.User.Index.fs" />
+    <Compile Include="Pages/Administration/Administration.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
@@ -14,6 +18,7 @@
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Feliz" Version="1.31.1 " />
     <PackageReference Include="Feliz.Router" Version="3.5.0" />
+    <PackageReference Include="Feliz.UseElmish" Version="1.5.0" />
     <PackageReference Include="Thoth.Fetch" Version="2.0.0" />
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
   </ItemGroup>
