--- a/Client/Sources/Herebris.Client.fsproj
+++ b/Client/Sources/Herebris.Client.fsproj
@@ -13,12 +13,13 @@
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Elmish" Version="3.1.0" />
     <PackageReference Include="Fable.Core" Version="3.1.6" />
+    <PackageReference Include="Fable.Elmish" Version="3.1.0" />
+    <PackageReference Include="Fable.Elmish.HMR" Version="4.1.0" />
+    <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Feliz" Version="1.31.1 " />
     <PackageReference Include="Feliz.Router" Version="3.5.0" />
-    <PackageReference Include="Feliz.UseElmish" Version="1.5.0" />
     <PackageReference Include="Thoth.Fetch" Version="2.0.0" />
     <PackageReference Include="Thoth.Json" Version="5.0.0" />
   </ItemGroup>
