--- a/Client/package.json
+++ b/Client/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start_old": "snowpack dev",
-    "build": "snowpack build",
-    "watch": "npx concurrently -n fable,parcel \"npm run watch-fable\" \"npm run watch-parcel\"",
-    "watch-parcel": "snowpack dev",
+    "watch": "npx concurrently -n fable,webpack \"npm run watch-fable\" \"npm run watch-webpack\"",
+    "watch-webpack": "npx webpack serve",
     "watch-fable": "dotnet fable watch Sources/Herebris.Client.fsproj --outDir ./src/fableBuild"
   },
   "author": "Maxime Mangel <mangel.maxime@protonmail.com>",
@@ -20,17 +18,11 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-react-refresh": "^2.3.9",
-    "@snowpack/web-test-runner-plugin": "^0.1.5",
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
-    "express": "^4.17.1",
     "file-loader": "^6.2.0",
-    "http-proxy-middleware": "^1.0.6",
     "parcel-bundler": "^1.12.4",
     "react-refresh": "^0.9.0",
-    "snowpack": "^2.18.4",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
