--- a/Server/package.json
+++ b/Server/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "pg-monitor": "^1.4.1",
+    "pg-promise": "^10.8.7"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
